fix Issue create, update frontend and backend side
